// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<notification> demo: render [basic] correctly 1`] = `
"<div class=\\"sd-space sd-space-horizontal sd-space-align-center\\" style=\\"column-gap: 8px; row-gap: 8px;\\">
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
      <!--v-if--> Open Notification
    </button></div>
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
      <!--v-if--> Open Notification
    </button></div>
</div>"
`;

exports[`<notification> demo: render [btn] correctly 1`] = `
"<button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
  <!--v-if--> Open Notification
</button>"
`;

exports[`<notification> demo: render [custom-close] correctly 1`] = `
"<div class=\\"sd-space sd-space-horizontal sd-space-align-center\\" style=\\"column-gap: 8px; row-gap: 8px;\\">
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
      <!--v-if--> Open Notification
    </button></div>
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-danger\\" type=\\"button\\">
      <!--v-if--> Open Notification
    </button></div>
</div>"
`;

exports[`<notification> demo: render [position] correctly 1`] = `
"<div class=\\"sd-space sd-space-horizontal sd-space-align-center\\" style=\\"column-gap: 8px; row-gap: 8px;\\">
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
      <!--v-if--> Top Right
    </button></div>
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
      <!--v-if--> Top Left
    </button></div>
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
      <!--v-if--> Bottom Right
    </button></div>
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
      <!--v-if--> Bottom Left
    </button></div>
</div>"
`;

exports[`<notification> demo: render [style] correctly 1`] = `
"<button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
  <!--v-if--> Open Notification
</button>"
`;

exports[`<notification> demo: render [type] correctly 1`] = `
"<div class=\\"sd-space sd-space-horizontal sd-space-align-center\\" style=\\"column-gap: 8px; row-gap: 8px;\\">
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
      <!--v-if--> Info
    </button></div>
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-success\\" type=\\"button\\">
      <!--v-if--> Success
    </button></div>
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-warning\\" type=\\"button\\">
      <!--v-if--> Warning
    </button></div>
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-danger\\" type=\\"button\\">
      <!--v-if--> Error
    </button></div>
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
      <!--v-if--> Normal
    </button></div>
</div>"
`;

exports[`<notification> demo: render [update_duration] correctly 1`] = `
"<button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
  <!--v-if--> Open Notification
</button>"
`;

exports[`<notification> demo: render [update_notification] correctly 1`] = `
"<button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
  <!--v-if--> Open Notification
</button>"
`;
